Fix CSS paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VivaDecor</title>
     <!-- Bootstrap File -->
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="./src/css/bootstrap.css">
     <!-- Main CSS -->
     <link rel="stylesheet" href="./src/css/master.css">
     <!-- Start FontAtom File -->
@@ -397,10 +397,9 @@
         </div>
     </footer>
     <!-- End Footer Section -->
+
     <!-- Bootstrap JS Bundle -->
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    <!-- Main JS -->
-    <script src="./src/ts/main.js"></script>
+    <script src="./src/js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
