Edit For Index File

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     <div class="boxes">
                         <div class="box d-flex align-items-start gap-4 mb-5">
                             <div class="img">
-                                <img src="./public/imgs/Ellipse 1@2x.png" alt="Start Project" class="img-fluid"
+                                <img src="./public/imgs/Ellipse 1.png" alt="Start Project" class="img-fluid"
                                     style="max-width: 60px;" loading="lazy">
                             </div>
                             <div class="text">
